commit fixed JwtGenerator from each provider's